# whetstone-sync

./: .gitignore  .pdm.toml  README.md  extract.py  pyproject.toml  requirements.txt  settings.py  sync-users.py  sync-users.sh
.github/workflows/: codeql-analysis.yml
config/: fpodms.json  gapps.json  whetstone.json
datagun/: README.md  extract.py
datagun/config/: adp.json  fpodms.json  gapps.json  njdoe.json  whetstone.json
tests/: test_datagun.py  test_whetstone_sync.py
whetstone_sync/: extract.py  settings.py  sync-users.py  sync_users.py
