[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Charlie Bini", email = "5003326+cbini@users.noreply.github.com"},
]
dependencies = [
    "whetstone",
    "google-cloud-storage",
    "python-dateutil"]
requires-python = ">=3.9"
license = {text = "GPL3"}

[project.urls]
homepage = ""


[project.optional-dependencies]
[tool]
[tool.pdm]

[tool.pdm.dev-dependencies]
dev = [
    "black",
    "pytest",
    "flake8>=4.0.1",
]

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[tool.pdm.scripts]
extract.cmd = "python whetstone_sync/extract.py"
extract.env_file = ".env"
sync-users.cmd = "python whetstone_sync/sync-users.py"
sync-users.env_file = ".env"
