[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Charlie Bini", email = "5003326+cbini@users.noreply.github.com"},
]
dependencies = [
    "whetstone",
    "google-cloud-storage"]
requires-python = ">=3.9"
license = {text = "GPL3"}

[project.urls]
homepage = ""


[project.optional-dependencies]
[tool]
[tool.pdm]

[tool.pdm.dev-dependencies]
dev = []

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[tool.pdm.scripts]
_.env_file = ".env"
extract.cmd = "python whetstone_sync/extract.py"
extract.site_packages = true
sync-users.cmd = "python whetstone_sync/sync-users.py"
sync-users.site_packages = true
