[project]
name = ""
version = ""
description = ""
authors = [
  { name = "Charlie Bini", email = "5003326+cbini@users.noreply.github.com" },
]
dependencies = ["whetstone", "google-cloud-storage"]
requires-python = ">=3.9"
license = { text = "GPL3" }

[project.urls]
homepage = ""


[project.optional-dependencies]
[tool]
[tool.pdm]

[tool.pdm.dev-dependencies]
dev = []

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[tool.pdm.scripts]
_.env_file = ".env"
extract = { call = "whetstone_sync.extract:main" }
sync-users = { call = "whetstone_sync.sync_users:main" }
post_lock = { shell = "pdm export -f requirements -o requirements.txt" }
